Object pose IDProperty UI data is not versioned #91084

Closed
opened 2021-08-31 14:37:08 +02:00 by Demeter Dzadik · 7 comments
Member

Blender Version
Broken by: 8b9a3b94fc

Short description of error
It seems custom properties in older files get +- infinity as their min/max.

torch.blend

  • File saved on Aug 2 build
  • Allow executing scripts.
  • Press N to bring up the sidebar. There should be a CloudRig panel, with a "Shape" property at the top. It's a custom property, see the python tooltip.
  • Min/max value seems infinite when sliding
  • Opening with an older version of blender shows the min/max should be 1 and 4.
**Blender Version** Broken by: 8b9a3b94fc **Short description of error** It seems custom properties in older files get +- infinity as their min/max. [torch.blend](https://archive.blender.org/developer/F10357501/torch.blend) - File saved on Aug 2 build - Allow executing scripts. - Press N to bring up the sidebar. There should be a CloudRig panel, with a "Shape" property at the top. It's a custom property, see the python tooltip. - Min/max value seems infinite when sliding - Opening with an older version of blender shows the min/max should be 1 and 4.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Hans Goudey was assigned by Demeter Dzadik 2021-08-31 14:38:21 +02:00
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Got another one for you Hans!
Origin story: image.png

Got another one for you Hans! Origin story: ![image.png](https://archive.blender.org/developer/F10357511/image.png)
Demeter Dzadik changed title from Incorrect versioning of old custom properties' min/max values to Setting or versioning custom properties' sets their min/max values to infinity 2021-08-31 14:59:39 +02:00
Member

Thanks for the report, I'm on it!

Thanks for the report, I'm on it!

This issue was referenced by cfc674408e

This issue was referenced by cfc674408ee62e0f7f6b41aff0d1ef4a9fedf6db
Member

I will split the second issue into a separate report.

I will split the second issue into a separate report.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey changed title from Setting or versioning custom properties' sets their min/max values to infinity to Object pose IDProperty UI data is not versioned 2021-08-31 18:20:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91084
No description provided.