Fix T91084: Missing versioning for object pose bone property UI data

Objects also have a list of "bone" pose channels embedded directly.
These properties are user visible, so their UI data should be versioned.